Fix logo size and icon spacing

--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -88,3 +88,10 @@
 .btn-sm {
   font-size: .8rem;
 }
+.btn .fa {
+  position: relative;
+  top: -1px;
+  font-size: 1.4rem;
+  margin-left: 3px;
+  vertical-align: top;
+}
