--- a/_sass/logo.scss
+++ b/_sass/logo.scss
@@ -1,6 +1,7 @@
 .logo {
   display: block;
-  max-width: 100px;
+  width: 11%;
+  max-width: 200px;
   margin-left: auto;
   margin-right: auto;
 }
